--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,19 @@
 				<target>1.6</target>
 			</configuration>
 		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jar-plugin</artifactId>
+			<version>2.5</version>
+			<configuration>
+				<archive>
+					<manifest>
+						<mainClass>org.lolxml.Main</mainClass>
+						<packageName>org.lolxml</packageName>
+					</manifest>
+				</archive>
+			</configuration>
+		</plugin>
 	</plugins>
 </build>
 </project>
