Refactor: eval() now protected and thows IOException LolXML main class License notices
--HG--
rename : src/main/java/org/lolxml/Main.java => src/main/java/org/lolxml/LolXML.java

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 			<configuration>
 				<archive>
 					<manifest>
-						<mainClass>org.lolxml.Main</mainClass>
+						<mainClass>org.lolxml.LolXML</mainClass>
 						<packageName>org.lolxml</packageName>
 					</manifest>
 				</archive>
