--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,17 @@
 				</archive>
 			</configuration>
 		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-javadoc-plugin</artifactId>
+			<version>2.9.1</version>
+			<executions>
+			    <execution>
+			        <goals><goal>javadoc</goal></goals>
+			        <phase>package</phase>    
+			    </execution>
+			</executions>
+		</plugin>
 	</plugins>
 </build>
 </project>
